--- a/Read/ReadAndroid/00.方案实践/09.网络优化设计实践.md
+++ b/Read/ReadAndroid/00.方案实践/09.网络优化设计实践.md
@@ -5,10 +5,9 @@
     - 1.3 基础概念
     - 1.4 设计目标
     - 1.5 收益分析
-- 02.技术点分析
+- 02.网络分析流程
     - 2.1 获取网络请求头
-    - 2.2 获取网络响应头
-    - 2.3 获取网络响应体
+    - 2.2 curl分析网络
 - 03.网络监控思路
     - 3.1 弱网模拟思路
     - 3.2 抓包拦截思路
@@ -16,13 +15,8 @@
     - 3.4 域名ping思路
     - 3.5 网络异常统计思路
     - 3.6 耗时统计思路
-- 04.方案实践步骤
-    - 4.1 弱网模拟实践
-    - 4.2 抓包拦截实践
-    - 4.3 流量统计实践
-    - 4.4 域名ping实践
-    - 4.5 网络异常统计实践
-    - 4.6 耗时统计实践
+- 04.网络优化实践
+    - 4.1
 - 05.方案基础设计
     - 5.1 整体架构图
     - 5.2 UML设计图
@@ -41,10 +35,71 @@
 #### 2.1 获取网络请求头
 
 
-#### 2.2 获取网络响应头
+#### 2.2 curl分析网络
+- curl如何分析接口请求说明
+    - curl（全称Client URL）是一个在命令行下运行的网络工具，用于与服务器进行通信。
+    - 它支持多种协议，包括HTTP、HTTPS、FTP、SMTP、TELNET等，并提供了丰富的选项和功能，使其成为一个强大的网络调试和测试工具。
+- curl命令的基本语法
+    - 基本语法如下：curl [选项] [URL] 比如，我要调试某个接口查看请求详细信息：curl -v https://www.wanandroid.com/article/list/0/json
+- curl测试接口案例分析
+    ```
+    yangchongdeMacBook-Pro:~ yangchong$ curl -v https://www.wanandroid.com/article/list/0/json
+    *   Trying 47.104.74.169:443...
+    * Connected to www.wanandroid.com (47.104.74.169) port 443 (#0)
+    * ALPN: offers h2,http/1.1
+    * (304) (OUT), TLS handshake, Client hello (1):
+    *  CAfile: /etc/ssl/cert.pem
+    *  CApath: none
+    * (304) (IN), TLS handshake, Server hello (2):
+    * TLSv1.2 (IN), TLS handshake, Certificate (11):
+    * TLSv1.2 (IN), TLS handshake, Server key exchange (12):
+    * TLSv1.2 (IN), TLS handshake, Server finished (14):
+    * TLSv1.2 (OUT), TLS handshake, Client key exchange (16):
+    * TLSv1.2 (OUT), TLS change cipher, Change cipher spec (1):
+    * TLSv1.2 (OUT), TLS handshake, Finished (20):
+    * TLSv1.2 (IN), TLS change cipher, Change cipher spec (1):
+    * TLSv1.2 (IN), TLS handshake, Finished (20):
+    * SSL connection using TLSv1.2 / ECDHE-RSA-AES256-SHA384
+    * ALPN: server did not agree on a protocol. Uses default.
+    * Server certificate:
+    *  subject: CN=wanandroid.com
+    *  start date: Jan  2 00:00:00 2023 GMT
+    *  expire date: Jan  2 23:59:59 2024 GMT
+    *  subjectAltName: host "www.wanandroid.com" matched cert's "www.wanandroid.com"
+    *  issuer: C=CN; O=TrustAsia Technologies, Inc.; CN=TrustAsia RSA DV TLS CA G2
+    *  SSL certificate verify ok.
+    * using HTTP/1.x
+    > GET /article/list/0/json HTTP/1.1
+    > Host: www.wanandroid.com
+    > User-Agent: curl/7.88.1
+    > Accept: */*
+    > 
+    < HTTP/1.1 200 OK
+    < Server: Apache-Coyote/1.1
+    < Cache-Control: private
+    < Expires: Thu, 01 Jan 1970 08:00:00 CST
+    < Set-Cookie: JSESSIONID=34447AAA7368A824F67DE25710B89326; Path=/; Secure; HttpOnly
+    < Content-Type: application/json;charset=UTF-8
+    < Transfer-Encoding: chunked
+    < Date: Fri, 04 Aug 2023 02:14:56 GMT
+    < 
+    {"data":{"curPage":1,"datas":""} ……此处省略一堆的响应数据}
+    ```
+- 一些核心要点分析：
+    - Connected to www.wanandroid.com (47.104.74.169) port 443 (#0) ：这段话表示解析域名后得到的ip地址和端口号port443
+    - (OUT),TLS handshake, Client hello (1)：客户端开始新的握手( ClientHello)，将自身支持的加密功能（Cipher Suites）提交给服务器。
+    - (IN), TLS handshake, Server hello (2)：服务器( ServerHello)，选择Cipher Suite。
+    - (IN), TLS handshake, Certificate (11)：服务器发送其证书(Certificate)（当需要服务器身份验证时）。
+    - (IN), TLS handshake, Server key exchange (12)：根据选择的密钥交换方式，服务器发送生成主密钥的额外信息。
+    - (IN), TLS handshake, Server finished (14)：服务器通知客户端自己完成了协商过程。
+    - (OUT), TLS handshake, Client key exchange (16)：客户端发送生成主密钥所需的额外信息（ClientKeyExchange）。
+    - (OUT), TLS change cipher, Change cipher spec (1)：客户端切换到加密方式并通知服务器。
+    - (OUT), TLS handshake, Finished (20)：客户端计算发送和接收到的握手消息的MAC并发送。
+    - (IN), TLS change cipher, Change cipher spec (1)：服务器切换加密方式并通知客户端。
+    - (IN), TLS handshake, Finished (20)：服务器计算发送和接收到的握手消息的MAC并发送。
+    - 详细讲解一下每个步骤，这里主要是TLS协议中握手协议流程。更多可以看：[TLS协议中的握手协议](https://blog.csdn.net/zhbgreat/article/details/87867380)
 
 
-#### 2.3 获取网络响应体
 
 
 
@@ -59,6 +114,8 @@
     - 通过拦截器拿到Chain对象，先发送request，请求成功后会拿到真是respond数据。那么这个时候可以针对这个respond处理，重新设置数据和code码信息
 - 如何模拟弱网环境
     - 模拟弱网环境相对复杂一点，发送request和接收respond数据都会有io流读写操作。其核心思路就是对io读写速度做出限制，比如每秒读取1k数据，那么读取10k的接口数据需要10秒
+    - 如何对RequestBody数据限制？请求数据write的时候，第一限制字节流传输(每次写设置byteCount字节长度)，第二在一秒内如果超出限制就sleep一下
+    - 如何对ResponseBody数据限制？
 
 
 #### 3.2 抓包拦截思路
@@ -74,37 +131,6 @@
 - 如何拿来用
     - 既然Android中使用到facebook的stetho库，可以拦截手机请求请求，然后去Chrome浏览器，在浏览器地址栏输入：chrome://inspect 。即可查看请求信息。
     - 那么能不能把这个拿到的请求信息(请求信息和相应信息)，放到集合中，然后在Android的页面中展示呢？这样方便开发和测试查看网络请求信息，以及请求流程中的消耗时间（比如dns解析时间，请求时间，响应时间，共耗时等等）
-
-
-
-#### 3.3 流量统计思路
-
-
-
-#### 3.6 耗时统计思路
-- 如何消耗记录时间
-    - 在OkHttp库中有一个EventListener类。该类是网络事件的侦听器。扩展这个类以监视应用程序的HTTP调用的数量、大小和持续时间。
-    - 所有启动/连接/获取事件最终将接收到匹配的结束/释放事件，要么成功(非空参数)，要么失败(非空可抛出)。
-    - 比如，可以在开始链接记录时间；dns开始，结束等方法解析记录时间，可以计算dns的解析时间。
-    - 比如，可以在开始请求记录时间，记录connectStart，connectEnd等方法时间，则可以计算出connect连接时间。
-
-
-### 04.封装思路介绍
-#### 4.1 弱网模拟实践
-- 如何开发模拟网络异常工具
-    - 整体设计思路是，给OkHttpClient添加拦截器，然后在拦截器中拿到request和respond数据做处理即可。
-- 如何模拟网络超时
-    - 网络超时分为两种：请求超时和响应超时。请求超时是指客户端发送request到服务端过程超时，响应超时是指客户端在接收服务端respond数据过程超时。
-    - 模拟请求超时需要在chain.request()代码前面sleep时间，模拟响应超时需要在chain.proceed(request)代码之后sleep时间即可。
-- 如何模拟重定向或服务端异常
-    - 通过拦截器拿到Chain对象，先发送request，请求成功后会拿到真是respond数据。那么这个时候可以针对这个respond处理，重新设置数据和code码信息
-- 如何模拟弱网环境
-    - 模拟弱网环境相对复杂一点，发送request和接收respond数据都会有io流读写操作。其核心思路就是对io读写速度做出限制，比如每秒读取1k数据，那么读取10k的接口数据需要10秒
-    - 如何对RequestBody数据限制？请求数据write的时候，第一限制字节流传输(每次写设置byteCount字节长度)，第二在一秒内如果超出限制就sleep一下
-    - 如何对ResponseBody数据限制？
-
-
-#### 4.2 抓包拦截实践
 - 如何统计网络请求和相应信息，大概流程如下所示
     - 第一步，找到入口，给OkHttpClient添加拦截器，该自定义拦截器继承Interceptor然后重写intercept拦截方法。
     - 第二步，构建一个独特的eventID，一对网络事件（请求和回包）对应一个eventID(使用AtomicInteger保证异步下数据独一)。这个是在创建NetworkEventReporter对象重写nextRequestId方法获取。
@@ -118,7 +144,17 @@
     - 第四步，在执行监听最后的方法callEnd中，做出最后的计算，主要是记录每个阶段的差值，存到对应的bean中(注意一个完整的请求和回包流程id是唯一的)。
 
 
-#### 4.6 耗时统计实践
+
+#### 3.3 流量统计思路
+
+
+
+#### 3.6 耗时统计思路
+- 如何消耗记录时间
+    - 在OkHttp库中有一个EventListener类。该类是网络事件的侦听器。扩展这个类以监视应用程序的HTTP调用的数量、大小和持续时间。
+    - 所有启动/连接/获取事件最终将接收到匹配的结束/释放事件，要么成功(非空参数)，要么失败(非空可抛出)。
+    - 比如，可以在开始链接记录时间；dns开始，结束等方法解析记录时间，可以计算dns的解析时间。
+    - 比如，可以在开始请求记录时间，记录connectStart，connectEnd等方法时间，则可以计算出connect连接时间。
 - 遇到的问题记录说明
     - 客户端请求从发起到网关实际接收到，中间有很复杂的链路，发起请求，dns解析，开始链接，发送请求头，发送请求body，返回数据等很多个阶段。
 - 基于OkHttp的网络监控
@@ -126,11 +162,13 @@
 - 基于OKHttp提供的EventListener
     - 可以对于一个请求发起到最后的各个节点进行监控，之后上报日志数据，针对网络请求每个阶段的耗时情况都可以用数据说明。
 - 网络请求耗时统计已经有了现成的库
-    - [网络请求耗时统计库](https://github.com/yangchong211/YCAndroidTool/tree/master/MonitorNetLib)；关于EventListener的原理解读可以看我另一篇博客：[OkHttp请求耗时统计和实践](https://juejin.cn/post/6875626117265358855)
+    - 针对网络请求每个阶段统计了消耗时间，[网络请求耗时统计库](https://github.com/yangchong211/YCAndroidTool/tree/master/MonitorNetLib)；
+    - 关于EventListener的原理解读可以看我另一篇博客：[OkHttp请求耗时统计和实践](https://juejin.cn/post/6875626117265358855)
 
 
 
-#### 4.7 关于弱网模拟
+### 04.网络优化实践
+
 
 
 
