--- a/Read/ReadShareWiki/02.生活博客/04.生活沟通的记录.md
+++ b/Read/ReadShareWiki/02.生活博客/04.生活沟通的记录.md
@@ -12,6 +12,7 @@
 - 11.表达送客的沟通
 - 12.少参加是非八卦
 - 13.聊天尺度的问题
+- 14.捧人的沟通方式
 - 18.其他问题的沟通
 
 
@@ -172,6 +173,9 @@
     - 一个话题卡住了，就可以换下一个话题，别要抱着一个话题不放。说道话题，重要的就是要广泛涉猎，多读书，多思考，平时事情上多留心，总结归纳，其实话题在生活中无处不在的。
     - 每个人都喜欢聊自己，所以要尽量让对方能够很好的表现自己，让他感觉到自己的重要性。多说一些为什么啊，是不是啊，怎么会呢，你太幸运啦这些话，每个人都渴望得到别人的赞赏，所以要多表扬别人，别人的突出的地方，还有就是不要说的很空洞，要找到他希望别人表扬的地方，否则别人会认为你不够真诚。
     - 还有就是多把周围一个人表扬夸奖另外一个人的话转给这个人听，这样才会越来越受欢迎，借用别人这个题目来表扬一个人是很明智的一件事，不管别人说没说，对大家都是有好处的。
+
+
+### 14.捧人的沟通方式
 
 
 
