--- a/Read/ReadShareWiki/02.生活博客/06.不为人知的哲学.md
+++ b/Read/ReadShareWiki/02.生活博客/06.不为人知的哲学.md
@@ -3,6 +3,7 @@
 - 03.优雅与老板谈工资
 - 04.张仲平的送礼艺术
 - 05.普通人要学会借力
+- 06.不要怕被别人利用
 
 
 
@@ -97,6 +98,18 @@
     - 因此，在得到对方帮助之后，我们不应该就此断了联系，而是应该继续保持沟通和关系，给对方一些反馈和感谢，甚至提供一些额外的帮助和回报。
     - 这样可以增加对方对我们的信任和好感，也可以为未来的合作打下良好的基础。
 
+
+### 06.不要怕被别人利用
+- 先说一下背景
+    - 杜月笙初到黄金荣府上，黄金荣对他并没有什么印象：不过一个恭顺的低级门徒而已。这样的人，在黄府要多少有多少。
+    - 一个毛贼却改变了杜月笙的一生。一名门徒趁黄金荣外出，拐走了一麻袋烟土，执行家法的打手们全都不在，上下束手无策。
+    - 杜月笙说“老板娘，我去跑一趟吧！”，林桂生也不在意。以为是这个青年人想快速出人头地。
+    - 他脑筋清楚：拐走烟土的人不敢去黄金荣的地盘法租界，入夜后也进不了上海城，他只能去英租界。很快，他凭借林桂生临时给他的一把枪，杜月笙找到偷烟土的人，只说了三句话。烟土就回来了。
+    - “放心，没人要你命，黄公馆里什么时候做过人啊！”。“但是你要和我走一趟！”。“桂生姐刀子嘴豆腐心，菩萨心肠！”
+- 不要怕被人利用
+    - 事情做成了，杜月笙并不居功自傲。好像刚刚立的大功和自己无关一样。
+    - 立下如此大功，但也没有得到提拔。杜月笙没有任何抱怨，仍专心干好看门小弟的事。
+    - 杜月笙说“不要怕被别人利用，人家利用你说明你还有用。”一个人只要诚心诚意做事，不计较一时回报，不攀比周边待遇，迟早会有出头之日。
 
 
 
