--- a/Read/YCBlogWiki/test/04.adb命令大全说明.md
+++ b/Read/YCBlogWiki/test/04.adb命令大全说明.md
@@ -47,6 +47,7 @@
   - adb install -r -d C:\Users\zl\Desktop\xxx.apk(包名)
 - adb 杀死 apk 进程
   - adb shell am force-stop 包名
+  - adb shell am force-stop com.tencent.wx
 
 
 ### 04.adb清app缓存
@@ -120,7 +121,3 @@
     - 执行 source ~/.zshrc 立即应用文件修改。
     - 执行adb shell 测试最后可以正常使用 adb 命令了。
 
-
-
-
-mvn deploy:deploy-file -Dfile=/Users/yangchong/Downloads/meachine_sdk-release_1.1.1.aar -DgroupId=com.tencent.weixiao -DartifactId=DeKaSDK -Dversion=1.1.1-snapshot -Dpackaging=aar -DrepositoryId=weixiao_snapshot -Durl=https://mirrors.tencent.com/repository/maven/weixiao_snapshot
