--- a/Read/ReadShareWiki/02.生活博客/02.生活感想大集合.md
+++ b/Read/ReadShareWiki/02.生活博客/02.生活感想大集合.md
@@ -16,6 +16,8 @@
 - 16.克服周一综合症
 - 17.如何让自己有趣
 - 18.空闲时间需提升
+- 19.未来需求的探索
+- 20.有钱才能更任性
 
 
 
@@ -342,6 +344,60 @@
 - 怎样利用工作之余的时间
     - 一切自有你自己决定，好好利用空闲时间，它能改变一个人，如果当你去浪费这段时间，你将会发现自己一无所获。
 
+
+
+### 19.未来需求的探索
+- 关于未来需求感想
+    - 在二十多岁的年龄，压力还相对比较小，我们利用时间来冲抵我们自己的经验的不足，我们可以不在乎工作时间多长多累，或者工资多少。然而，到了三十几岁或者四十几岁，那么我们又该怎么办呢？
+    - 如果不能够及时预想以后的生活，那么我们不妨可以看看现阶段我们的榜样或者想成为的目标人群的生活是不是我们想要的……
+    - 那么想要在未来过上自己想要的生活，我们从现在起又该怎样做呢？根据逆向法则，我们又是否能够将任务拆分，分阶段去逐步实现……
+    - 我发现一旦思考这个问题，可以用两个字来形容我小杨的状态，那就是头疼！可是不思考，就怕以后会更加头疼！
+- 未来需求会有那些
+    - 了解了我们的需求后，我们更能思考现在该怎么做……
+    - A.可能会有一套房子或者车子要供养，这个目前好像是个刚性需求。在我老家农村倒是很重要
+    - B.可能有一个或者两个小孩要抚养，甚至老婆一两年还不能工作
+    - C.有双方的父母四个老人要赡养，随着父母的年龄越大，自己的压力也会越大
+    - D.有几个朋友要护养
+    - E.有一些兴趣要培养
+    - F.要有一份能够预防疾病的资金，保证家人健康不受到威胁
+    - G.要买至少一分的意外保险或者家庭保险
+    - H.有些人还计划每年带着家人出去旅行一次……
+    - I.还有其他需求待定……
+- 十年后价值增值多少
+    - 再来想想，这些不光要花金钱成本，而且还要花时间，这必然需要更多的收入。那么大概是多少才算合适呢？相信不同的人也会有不同的看法。
+    - 想想十年后的自己和现在的工作，同样的事件能够创造更大的经济收益吗？再去想想创造更大的价值，自己又是否具备足够多的经验和丰富的专业技能使自己的价值增值。
+    - 现在的自己在工作上值这个价钱，但是你的职场“身价”是否有所提高呢？根据逆向思维推论，想想自己现在该怎么做，哎，想到这里就感觉可怕。
+    - 假如现在的你，丧失了原来的工作或者家人遇到的疾病，只是说假如，可千万别当真，想想我们原来的生活是否可以维持下去呢。
+    - 往往风险是无处不在的，你有能力去应对吗？生活不是逞强就可以继续的，最后还是靠实力证明。这一点只有当你处于极度经济危机时才会深有体会……
+    - 人在顺境的时候，一定要想想危机在哪里？人在危机的时候，一定要想想美好的明天……如果搞反了，那么真的会很痛苦！
+    - 有钱不一定快乐，但是没钱会很痛苦，面对大多数的东西，钱是基础，只有有了基础，才能精力做更多的事情。
+- 创造自己的美好未来
+    - 每个人都想过上好的生活，这点毋庸置疑……每个人对未来好的生活定义也不一样，所以过上自己想要的生活就可以呢！
+    - 有人说，没有过上想要的生活，百分之四十是来自于自己不努力，有百分之六十是来自生活中的攀比，我也不知道对不对，但还是有些道理的。
+    - 每个人的起点都不一样，就像一场马拉松比赛，这是一场几十年的长跑，所以没有必要太在意眼前的距离。
+    - 在你坚持的过程中，你会慢慢提升自己的能力！虽然每一小步的努力不一定能够让你一定成功，但是可以让你距离目标更近一步，让你有了创建美好未来的机会！
+
+
+### 20.有钱才能更任性
+- 不知道你们有没有想过这几个问题：
+    - 第一，父母生大病的时候，你能不能拿出足够的钱让他们治疗？
+    - 第二，孩子要上学受教育的时候，你是否能够让孩子去上好的学校？
+    - 第三，爱人想要一个属于你们自己的房子时，你能否爽快无任何压力地答应她？
+    - 第四，自己面临失业，或者创业失败，没有收入来源时，你有没有面对风险的能力？
+- 你有足够多的钱，就能够在父母生病的时候，可以底气十足地跟治疗他们的医生说，放心吧，用最好的药，我有钱。
+    - 可以在孩子要上学的时候，可以不要愁孩子能否受到好的教育，不用为付不起学费而头疼。
+    - 可以在爱人想要买任何东西时，毫不犹豫地跟她说：“买啊！喜欢就买，钱够。”
+    - 可以让你自己每时每刻都有着安全感，就算是因为特殊原因，让你没有收入来源时，你也不用慌慌张张。
+- 有钱意味着选择更多
+    - 有钱，意味着能够拥有更多的选择权，你可以选择做什么，而不是只能做什么。但是，倘若你在遇到这些问题时，恰好没钱会是怎么样的一种结果？
+    - 在父母生病住院时，没钱就意味着得不到更好的治疗，甚至明明可以治疗的病情，到最后却因为没钱而放弃了，只能无力地看着父母受到病魔的折磨，却不能改变什么。
+    - 在孩子要上学时，没钱就意味着你只能够将他送到那种廉价的幼儿园，去凑合凑合着过，根本顾不上他在里面是否能够受到好的教育。
+    - 在爱人想要买一些礼物，甚至想要买一些家具时，没钱就意味着你只能很无奈地跟她说，不买了吧，我们没钱啊，钱要省点花。
+- 没钱只能无能为力
+    - 在自己失业，丢了工作时，没钱就意味你很可能会感到没有安全感，迷茫，焦虑，会觉得生活没法过了。
+    - 没钱，在很多时候就意味着四个字：无能为力。或许有人会说，你这说的也太现实了吧？但我想告诉你，这从来就不是说说，这就是现实。
+    - 买得起自己喜欢的东西，去得了自己想去的地方，做得到自己想做的事情，能够在这个世界拥有选择的权利。
+    - 努力赚钱是为了什么？是为了在某一天需要急用到钱的时候，能够乐观地说：“有钱真好啊。”而不是无奈地说：“有钱，就好了。”愿余生，不必因为钱而感到为难。
 
 
 
