--- a/Read/ReadAndroid/00.方案实践/30.App安全防御实践.md
+++ b/Read/ReadAndroid/00.方案实践/30.App安全防御实践.md
@@ -16,6 +16,7 @@
 - 03.一些安全防御实践
     - 3.1 本地加密
     - 3.3 接口签名
+    - 3.4 TCP协议安全攻击
 - 06.方案基础设计
     - 6.1 整体架构图
     - 6.2 UML设计图
@@ -125,7 +126,8 @@
         android:exported="true"/>
     ```
 - 修复建议
-    - 如果应用的 Activity 组件不必要对外，或者组件配置了intent filter标签，建议显示设置组件的'android:exported'属性为'false'；如果组件必须要提供给外部应用使用，建议对组件进行权限控制。
+    - 如果应用的 Activity 组件不必要对外，或者组件配置了intent filter标签，建议显示设置组件的'android:exported'属性为'false'；
+    - 如果组件必须要提供给外部应用使用，建议对组件进行权限控制。
     - android:exported 是Android中的四大组件 Activity，Service，Provider，Receiver 四大组件中都会有的一个属性。总体来说它的主要作用是：是否支持其它应用调用当前组件。
 - 如果 android:exported="true" 无法修改，那么可以增加权限处理
     ``` xml
@@ -152,7 +154,8 @@
 
 
 
-
+#### 3.4 TCP协议安全攻击
+- https://zhuanlan.zhihu.com/p/620050694
 
 
 
