--- a/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
+++ b/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
@@ -1,13 +1,17 @@
 #### 目录介绍
-- 01.整体概述
+- 01.整体概述介绍
     - 1.1 项目背景
-    - 1.2 基础概念
+    - 1.2 核心思路说明
     - 1.3 设计目标
     - 1.4 收益分析
+    - 1.5 项目风险点
 - 02.方案设计思路
-    - 2.1 网络判断策略
-    - 2.2 网络切换策略
-    - 2.3 项目整体设计
+    - 2.1 需求拆解分析
+    - 2.2 如何设置优先级
+    - 2.3 网络判断策略
+    - 2.4 网络切换策略
+    - 2.5 Wi-Fi切换&连接
+    - 2.6 多Wi-Fi连接
 - 03.方案设计图
     - 3.1 整体架构图
     - 3.2 UML设计图
@@ -15,14 +19,25 @@
     - 3.4 模块依赖关系
 - 04.原理解读研究
     - 4.1 网络管理机制
+    - 4.2 Wi-Fi间切换
+    - 4.3
 - 05.遇到的问题
     - 5.1 打开Wi-Fi失败
 
 
-### 01.整体概述
+### 01.整体概述介绍
 #### 1.1 项目背景
 - 业务背景介绍
     - 1、优先级：网线>Wi-Fi>移动流量(机具可能有网卡) ；2、网线不通情况下自动切换到回无线网；3、无线网也只有3分钟不通的情况才自动切换回网线。
+- 网络类型说明
+    - 1.Wi-Fi网络；2.网线；3.移动流量(5G/4G/3G等)；4.无网络。目前大体分为这四种
+    - 2.Wi-Fi网络分成不同场景：A.连接Wi-Fi可用；B.连接Wi-Fi不可用；C.未连接不可用
+    - 3.网线分成不同场景：A.连接网线可用；B.连接网线不可用；C.未连接不可用
+    - 4.移动流量分成不同场景：A.连接移动流量可用；B.连接移动流量不可用；C.未连接不可用
+- 网络组合的场景
+    - 按照每一种网络类型有3种场景，那么组合到一起，则一共有27种不同业务场景。
+    - 场景太多，显然不能单纯地配对实现，应该按照某种特定的优先级去切换网络。
+    - 举一个例子：网络连接优先级是网线>Wi-Fi>移动流量，那么在开发阶段种就按照这种情况去检测网络，按优先级连接切换，否则场景多了搞的好复杂！
 - 业务分析思路
     - A.优先选择网线的模式，如果网线连接并且有数据流量，则优先使用网线
     - B.如果网线不通情况(网线未连接/网线网络断开等)，则自动切换到Wi-Fi无线网
@@ -32,7 +47,7 @@
 
 
 
-#### 1.2 基础概念
+#### 1.2 核心思路说明
 - 网络为何要自动切换
     - 网线和WIFI都连接的时候，Android默认使用网线，但有时候网线松动或者不可用了，这个时候需要自动切换到Wi-Fi环境。
     - Wi-Fi连接的时候也可能会遇到一些问题，比如现实环境中不可能到处都有wifi，或者Wi-Fi不可用，所以Android设备会经常自动切换网络。
@@ -77,8 +92,11 @@
 
 
 
+#### 2.3 网络判断策略
 
-#### 2.3 网络切换策略
+
+
+#### 2.4 网络切换策略
 - 以太网判断逻辑
     - 不管是拔掉网线，或者网线松动，或者网线连接正常但是是断开场景，或者网线连接正常但数据传输失败。都可以认为以太网不可用。
 - 如何判断以太网不可用？如何监听以太网不可用？
@@ -92,7 +110,7 @@
 
 
 
-#### 2.4 Wi-Fi切换&连接
+#### 2.5 Wi-Fi切换&连接
 - 项目中有通过已知WiFi名称和密码连接硬件设备WiFi，实现数据交换的需求。
     - 给定WiFi名称，连接无密码的网络
     - 给定WiFi名称 和密码，连接网络 （需指定密码类型 wpa 或者web ）
@@ -100,6 +118,8 @@
     - 第一步：打开、关闭WIFI。WiFi的打开和关闭用的 WifiManager 类中的setWifiEnabled方法实现。
     - 第二步：WiFi连接。输入WiFi名称、密码实现连接。
     - 第三步：断开WIFI连接。断开WiFi连接有两种方法：暂时断开，可以重连；断开，不可以重连，忘记密码。
+
+
 
 
 
