--- a/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
+++ b/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
@@ -7,11 +7,12 @@
     - 1.5 项目风险点
 - 02.方案设计思路
     - 2.1 需求拆解分析
-    - 2.2 如何设置优先级
-    - 2.3 网络判断策略
-    - 2.4 网络切换策略
-    - 2.5 Wi-Fi切换&连接
-    - 2.6 多Wi-Fi连接
+    - 2.2 总体设计重点
+    - 2.3 如何设置优先级
+    - 2.4 网络判断策略
+    - 2.5 网络切换策略
+    - 2.6 Wi-Fi切换&连接
+    - 2.7 多Wi-Fi连接
 - 03.方案设计图
     - 3.1 整体架构图
     - 3.2 UML设计图
@@ -25,6 +26,8 @@
     - 5.1 打开Wi-Fi失败
 
 
+
+
 ### 01.整体概述介绍
 #### 1.1 项目背景
 - 业务背景介绍
@@ -36,25 +39,22 @@
     - 4.移动流量分成不同场景：A.连接移动流量可用；B.连接移动流量不可用；C.未连接不可用
 - 网络组合的场景
     - 按照每一种网络类型有3种场景，那么组合到一起，则一共有27种不同业务场景。
-    - 场景太多，显然不能单纯地配对实现，应该按照某种特定的优先级去切换网络。
-    - 举一个例子：网络连接优先级是网线>Wi-Fi>移动流量，那么在开发阶段种就按照这种情况去检测网络，按优先级连接切换，否则场景多了搞的好复杂！
-- 业务分析思路
-    - A.优先选择网线的模式，如果网线连接并且有数据流量，则优先使用网线
-    - B.如果网线不通情况(网线未连接/网线网络断开等)，则自动切换到Wi-Fi无线网
-    - C.切换到无线网，搜索无线网有多个，优先切换到上一次连接无线网(无线网需要密码)
-    - D.如果无线网切换成功，则开启无线网模式
-    - E.如果无线网3分钟不通情况下，则自动切换到网线模式
+    - 场景太多，显然不能单纯地配对实现(这种场景太多导致复杂化)，应该按照某种特定的优先级去切换网络。
 
 
 
 #### 1.2 核心思路说明
-- 网络为何要自动切换
-    - 网线和WIFI都连接的时候，Android默认使用网线，但有时候网线松动或者不可用了，这个时候需要自动切换到Wi-Fi环境。
-    - Wi-Fi连接的时候也可能会遇到一些问题，比如现实环境中不可能到处都有wifi，或者Wi-Fi不可用，所以Android设备会经常自动切换网络。
-- 突破口：网络监听
-    - 监听网线连接是否可用，两种情况，第一种网线没插上，第二种网上插上但网络不可用；
-    - 监听Wi-Fi是否可用，判断Wi-Fi是否连接上并且有数据流量。Wi-Fi可能有多个，从A切换到B的Wi-Fi策略要思考下；
-    - 关于切换网络环境后，比如从网线切换到Wi-Fi，如果3分钟不通那么又要切回网线，这个也需要监听
+- 按照优先级去切换网络
+    - 举一个例子：网络连接优先级是网线>Wi-Fi>移动流量，那么在开发阶段种就按照这种情况去检测网络，按优先级连接切换，否则场景多了搞的好复杂！
+- 检测网络的轮询操作，总结以下3种场景
+    - 如果网线可用，其他两种不论是否可用。这个时候都是用网线，3分钟检测逻辑不做业务处理。
+    - 如果网线不可用，其他两种有一种可用。这个时候就先用Wi-Fi(移动流量)，3分钟轮询检测网线是否可用，如果检测可用，则切换到网线
+    - 如果网线不可用，其他两种也不可用。这个时候就3分钟心跳，按网络连接优先级检测网络，如可用则连接优先级最高的网络！
+- 按照优先级去切换网络
+    - 场景1: 网线与无线同时正常。那这个时候按照优先级，优先使用网线！
+    - 场景2: 网线网络正常，无线不通。那这个时候按照优先级，优先使用网线！
+    - 场景3: 网线网络不通，无线网正常。那这个时候按照优先级，优先使用无线网！
+    - 场景4: 网线、无线网都不通。那这个时候按照优先级，优先使用无线网！次之Wi-Fi
 
 
 
@@ -68,8 +68,10 @@
 #### 1.4 收益分析
 - 提升产品体验
     - 网络不稳定的时候，之前需要用户手动去切换环境，由于是设备(有些设备是按键操作)不太好操作网络切换，因此体验上缺少友好感。
-    - 增加网络监听，并自动按照优先级策略，切换网络环境。可以强化产品体验
+    - 增加网络监听，并自动按照优先级策略，切换网络环境。可以强化产品体验。
 
+
+#### 1.5 项目风险点
 
 
 ### 02.方案设计思路
@@ -81,7 +83,24 @@
 
 
 
-#### 2.2 如何设置优先级
+#### 2.2 总体设计重点
+- 业务分析思路
+    - A.优先选择网线的模式，如果网线连接并且有数据流量，则优先使用网线
+    - B.如果网线不通情况(网线未连接/网线网络断开等)，则自动切换到Wi-Fi无线网
+    - C.切换到无线网，搜索无线网有多个，优先切换到上一次连接无线网(无线网需要密码)
+    - D.如果无线网切换成功，则开启无线网模式
+    - E.如果无线网3分钟不通情况下，则自动切换到网线模式
+- 网络为何要自动切换
+    - 网线和WIFI都连接的时候，Android默认使用网线，但有时候网线松动或者不可用了，这个时候需要自动切换到Wi-Fi环境。
+    - Wi-Fi连接的时候也可能会遇到一些问题，比如现实环境中不可能到处都有wifi，或者Wi-Fi不可用，所以Android设备会经常自动切换网络。
+- 突破口：网络监听
+    - 监听网线连接是否可用，两种情况，第一种网线没插上，第二种网上插上但网络不可用；
+    - 监听Wi-Fi是否可用，判断Wi-Fi是否连接上并且有数据流量。Wi-Fi可能有多个，从A切换到B的Wi-Fi策略要思考下；
+    - 关于切换网络环境后，比如从网线切换到Wi-Fi，如果3分钟不通那么又要切回网线，这个也需要监听
+
+
+
+#### 2.3 如何设置优先级
 - 如何设置网络优先级
     - A.使用Settings.global设置用户优先级，供ConnectivityService使用
     - B.使用ConnectivityManager.setNetworkPreference
@@ -92,11 +111,11 @@
 
 
 
-#### 2.3 网络判断策略
+#### 2.4 网络判断策略
 
 
 
-#### 2.4 网络切换策略
+#### 2.5 网络切换策略
 - 以太网判断逻辑
     - 不管是拔掉网线，或者网线松动，或者网线连接正常但是是断开场景，或者网线连接正常但数据传输失败。都可以认为以太网不可用。
 - 如何判断以太网不可用？如何监听以太网不可用？
@@ -110,7 +129,7 @@
 
 
 
-#### 2.5 Wi-Fi切换&连接
+#### 2.6 Wi-Fi切换&连接
 - 项目中有通过已知WiFi名称和密码连接硬件设备WiFi，实现数据交换的需求。
     - 给定WiFi名称，连接无密码的网络
     - 给定WiFi名称 和密码，连接网络 （需指定密码类型 wpa 或者web ）
@@ -122,8 +141,17 @@
 
 
 
+### 03.方案设计图
+#### 3.1 整体架构图
 
-#### 2.5 项目整体设计
+
+#### 3.2 UML设计图
+
+
+#### 3.3 关键流程图
+
+
+#### 3.4 模块依赖关系
 
 
 
