--- a/Read/ReadShareWiki/02.生活博客/06.不为人知的哲学.md
+++ b/Read/ReadShareWiki/02.生活博客/06.不为人知的哲学.md
@@ -4,6 +4,7 @@
 - 04.张仲平的送礼艺术
 - 05.普通人要学会借力
 - 06.不要怕被别人利用
+- 07.挣钱和陪孩子重要性
 
 
 
@@ -112,6 +113,64 @@
     - 杜月笙说“不要怕被别人利用，人家利用你说明你还有用。”一个人只要诚心诚意做事，不计较一时回报，不攀比周边待遇，迟早会有出头之日。
 
 
+### 07.挣钱和陪孩子重要性
+
+- 能唤醒多少人就唤醒多少人吧。我可以负责任的告诉各位，家庭陪伴和资本主义国家的快乐教育一样，是育儿理论的两大毒瘤，坑害了多少无知的家长，让多少无知的家长放弃了自己的成长、孩子的成长。
+- 我可以明确告诉你答案：挣钱的重要性是第一位的，绝对的第一。再也不要相信什么陪伴能给孩子完善的人格、幸福的童年了。
+- 当你的孩子大学毕业，为了找工作而发愁；当你孩子结婚了，为了彩礼嫁妆而为难；
+- 当你的孩子事业家庭遇到困惑而你毫无办法的时候，你就知道你年轻挣钱的重要性了，你就知道提升自己才是最好的陪伴的意义了。
+- 几个论点：第一，你要明白，从古至今，由内到外，人类社会的残酷事实就是拼爹。
+    - 古代也好、现代也好、中国也好、外国也好，无不是拼爹的社会。什么公平、平等，都是骗人的。
+    - 告诉你们几个事实，唐以前中国官员的升迁是推举制的，也就是说你爹是大官，就推荐你当官，你爹是农民，你连衙门的门都摸不着，只能世世代代当农民。
+    - 科举制以后，照样是拼爹的时代，千万不要被那些影视剧给迷惑了。
+    - 在清之前的所有朝代，能请得起私塾学习的，能天天只舞文弄墨的，只有那些有钱人，而没钱人生下来只能去跟着爹妈去干活，哪有时间、哪有银子去学习？
+    - 国外不是吗？你错了，国外的拼爹更严重。你看看美国那些常青藤大学的学生们，有几个是穷人的孩子？就一条，参加社会活动就拒绝了绝大多数平民的孩子。
+- 第二，你要明白这个更为重要的道理，你家庭的层次决定了你孩子的下限，而孩子自己的努力是他自己的上限。明白这个道理吧？
+    - 父母是博士，那么孩子最少也是211毕业；父母是官员，那么孩子最少也是体制内；父母企业老板，那么孩子最少也能“白手起家”。（除了基因突变，这个道理是天经地义的）。
+    - 俗话说龙生龙凤生凤，老鼠生来会打洞。什么意思，家庭是什么阶层，孩子就生活在什么阶层，这是孩子将来的下限。
+    - 反过来看，毫不客气的说，对于农民来说，孩子能考上211已经是祖坟冒烟了，这已经是农民朋友孩子们的上限了。
+    - 对于普通城市的居民来说，能进体制内，能考上公务员，能让他们炫耀一辈子，为什么，这也是普通居民的上限了。
+    - 对于做小买卖的人来说，孩子能有一份稳定的工作，他们就心满意足了，为什么，稳定的工作对他们来说已经是他们孩子的上限了。
+    - 想到这，你还为不努力、不奋斗找理由吗？第
+- 三，你还要明白一个道理，孩子人格的形成是众多因素造成，陪伴只是很小的一部分。
+    - 可以很负责任的告诉你，环境因素比陪伴更重要，重要几千倍、几万倍。你生活在农村，就算你天天陪着他，陪到12岁，孩子的性格还是农民的性格，孩子的眼界还是农村的眼界。
+    - 为什么，你能陪着你的孩子，你却陪不了他的玩伴，他的玩伴天天一口脏话、天天调皮捣蛋，你说你的孩子能有什么完善度的人格？
+    - 但如果你有相应的资本，让孩子住在大城市，让孩子每年能出去旅游、游学，给孩子买最好的学区房，他的朋友圈是什么样的？
+    - 是不是都是很有教养、很知道学习的一群人？这样你还觉得你所谓的陪伴有价值吗？
+    - 孩子人格的形成，陪伴因素太少了。而最关键的是父母的行为举止、他身边的环境——这两个才是核心因素。
+    - 说到这，你是不是要努力奋斗，给孩子一个更好的环境呢？
+- 第四，再告诉你一个事实，孩子的成长是需要大量的金钱积累的。
+    - 古代说琴棋书画样样精通，你知道这八个字意味着什么吗？意味着要耗费大量的金钱去陪伴。你想让你的孩子琴棋书画样样精通，你知道一年需要花多少钱吗？
+    - 不去挣钱，你指望在学校就能培养出郎朗？培养成世界冠军？笑话。你指望你自己去教？去陪伴？你的钢琴过几级了？你有素描、国画、油画的功底吗？你接受过专业的体育训练吗？你会下围棋、象棋？你会教吗？哪一个不是钱教出来的？
+    - 你就看到郎朗是钢琴王子， 你知道郎朗的家庭为了教出这么一个钢琴天才付出了多大努力吗？
+    - 你看到刘翔是世界冠军，你知道他为了训练，需要花费多大代价吗？
+    - 先不论你孩子有没有天赋了，你有足够的资本去培养孩子的天赋吗？
+- 第五，从孩子的性格养成（这是陪伴理论最大的卖点）分析
+    - 你是一个普通的家长，你没有接受过专业的教育知识，你所谓的陪伴都是无价值甚至是负价值的。
+    - 因为你不知道什么年龄的孩子需要什么样的教育，你不知道孩子在什么年龄需要干什么？光凭网上？更是笑话。
+    - 怎么办，你需要专业的教育人士去指导你，去面对孩子，这样他才会养成更完善、更向上的人格分。
+    - 没有钱，指望学校的教育。很不幸，告诉你，任何一个国家，学校培养的只是普通人，学校永远是普世教育，不是精英教育。
+    - 你需要大把大把的金钱、大把大把的人际关系去寻找最适合孩子成长的道路。
+- 第六，再从孩子学习来讲，无穷无尽的培训班就不用说了吧，可以明确告诉你，只要有竞争，只有有差额录取，就会卷起来。
+    - 千万不要相信国家搞“双减”那一套，国家要培养的人才梯队是金字塔形的，不是全民高等教育。
+    - 双减是为了大面积开展职业教育做准备的。是为了培养产业工人做准备的，不是为了培养高等教育做准备的。
+    - 醒醒吧。当你还在为了孩子的英语而发愁的时候，稍微有钱的会报N个培训班，教孩子英语；再有钱的会请家教，甚至是专家去教孩子；再有钱的直接把孩子送到英语国家了，天天说英语。哪类孩子英语会学好？
+    - 就凭你自己的英语储备，就教出好的英语生？我不敢说绝对不行，我觉得你自己也不相信吧。
+    - 还是那句话，就算是平庸的人，他在英国美国待两年，也比天才天天在中国学英语的英语成绩好。还用问吗？还不努力挣钱？给孩子更好的起点？
+- 第七，再告诉一个残酷的事实。有钱人是没有时间陪伴的。
+    - 不要相信那些所谓的有钱、有闲，这种人有，但这种人是他的爹妈给他创造的条件，说到底他的孩子是富三代而已。
+    - 实话告诉你，那些活跃在社会的高净值人士，高管们、高官们，每天不是请别人吃饭，就是被别人请吃饭，真的有时间陪伴孩子吗？
+    - 你看到的、你听到的都是假象。你听到某个优秀的孩子说，爸爸今天陪我去哪哪哪了，爸爸陪着我做了什么什么？那都是他成功后，告诉你、激励你、甚至是骗你的。
+    - 你不知道的是他的爸爸每天工作到很晚，每天见这个领导那个总经理。他的爸爸在工作之余带着孩子玩了一会，你就天真的一位他的爸爸陪伴着他。可能吗？
+    - 醒醒吧，千万不要再相信陪伴是最好的教育那一套了，就像再也不要相信快乐教育就能上北大清华一样了。
+    - 鸡娃不如鸡自己，与其天天自怨自艾埋怨孩子这也不行那也不行，还不如自己好好挣钱，给孩子更好的未来。
+- 第八，再告诉你一个你不愿接受的事实。家长最大的价值不是陪伴，而是榜样。明白吧？
+    - 你天天努力工作，天天为了家庭奋斗，孩子从小就会明白，他长大了要好好工作，他也要好好学习。
+    - 不是你天天陪着他，他看着你天天无所事事，他会好好学习吗？“管孩子”的核心是给孩子榜样。
+    - 你是专家学者，你每天写书做实验，那么你的孩子也就知道从小就要好好学习了；你是公司管理者、官员，那他的孩子从小也就希望能够成为领导者，天天想着怎么样才能领导别人了。
+    - 你什么都不是，让孩子学什么？你告诉他，孩子，你看我天天都陪着你，给你最好的人格，让你好好学习？
+    - 孩子会告诉你，爸爸，你每天不也没有好好学习，不也是每天陪我玩吗？你自身没有能力，配这孩子干什么就？
+    - 干瞪眼？醒醒吧，一定不要再有这样的疑问了，从现在起，鸡自己，好好工作，努力挣钱，给孩子好的榜样，让孩子看到你为家庭做出的努力，让孩子知道只有努力才有收获。这才是正确的教育。
 
 
 
