--- a/Read/ReadAndroid/00.方案实践/08.网络分析&优化实践.md
+++ b/Read/ReadAndroid/00.方案实践/08.网络分析&优化实践.md
@@ -159,6 +159,8 @@
 
 
 #### 2.4 流量统计分析
+- 流量监测的实现相对简单，利用系统提供的TrafficStats.getUidRxBytes方法，配合Actvity生命周期，即可获取每个Activity的流量消耗。
+- 具体做法：在Activity start的时候记录起点，在pause的时候累加，最后在Destroyed的时候统计整个Activity的流量消耗，如果想要做到Fragment维度，就要具体业务具体分析了
 
 
 
