--- a/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
+++ b/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
@@ -72,6 +72,12 @@
 
 
 #### 1.5 项目风险点
+- 风险点场景1
+    - 比如用户刚开始使用Wi-Fi(A)好使的，这个时候用户插上了网线，按照原始逻辑，则还是使用Wi-Fi(因为以用户手动操作为主)。
+    - 现在使用了网络切换逻辑，则需要切换到网线上(用户未主动做任何操作)，如果切换到网线上异常，则可能导致故障；如果切换网线正常，拔了网线，中间操作也可能出异常。
+- 风险点场景2
+    - 比如用户网线连接上了，采用Wi-Fi去连接上了网络。有可能用户会认为自己使用Wi-Fi
+
 
 
 ### 02.方案设计思路
