--- a/Read/ReadShareWiki/01.文学名著/01.钱钟书作品围城.md
+++ b/Read/ReadShareWiki/01.文学名著/01.钱钟书作品围城.md
@@ -20,13 +20,15 @@
 - 书中描述了世间四种爱（情欲之爱、门当户对、求之不得、无法摆脱）、人生三座城（婚姻之城、事业之城、自我之城）。
 - 婚姻之城：婚姻是座围城，外面的人想进来，里面的人想出来。
 - 事业之城：看似从一个城里挣扎着出来，最终陷入了另一座城的禁锢。
-- 其中最核心的思想是自我之城：对归属感和认同感盲目的追求，努力活成别人期许的模样，这才是人们心中最牢固、最难冲破的一座围城。方鸿渐对于归属感和认同感的盲目渴望，让他无论怎样挣扎都逃脱不了被束缚的命运。
+- 其中最核心的思想是自我之城：对归属感和认同感盲目的追求，努力活成别人期许的模样，这才是人们心中最牢固、最难冲破的一座围城。
+- 方鸿渐对于归属感和认同感的盲目渴望，让他无论怎样挣扎都逃脱不了被束缚的命运。
 
 
 
 ### 02.新版的儒林外史
 - 有人对钱老先生的《围城》有这样一段评价：“《围城》是描写知识分子最好的一部小说，可谓新《儒林外史》，但无论内容和技巧来说，《围城》较吴敬梓的《儒林外史》为佳。”
-- 这段评价道出了很多人的心声。钱钟书老先生这部唯一的长篇小说，在文学界的确享有盛誉，颇具盛名，如此评价它的确够格。钱钟书以幽默诙谐的笔调以及形象生动的比喻，刻画了一批形象鲜明的旧时社会知识分子的模样，并用主人公“方鸿渐”的悲剧人生，向我们展现了“围城”式的人生困境。
+- 这段评价道出了很多人的心声。钱钟书老先生这部唯一的长篇小说，在文学界的确享有盛誉，颇具盛名，如此评价它的确够格。
+- 钱钟书以幽默诙谐的笔调以及形象生动的比喻，刻画了一批形象鲜明的旧时社会知识分子的模样，并用主人公“方鸿渐”的悲剧人生，向我们展现了“围城”式的人生困境。
 - 一提到“围城”，人们就会不由自主地想这句话：婚姻就像一座围城，围城外的人想进来，围城里的人想出去。
 - 实际上，对主人公方鸿渐而言，他的事业、爱情和婚姻都成了他的“围城”。钱钟书老先生也曾说：“方鸿渐就是一直在围城里飞翔的鸟儿，始终无法落地，也始终无法飞出围城。于他而言，人生如此，事业也是如此。”
 
@@ -34,19 +36,55 @@
 
 ### 03.故事之简单简介
 - 《围城》是钱钟书所著的长篇小说，是中国现代文学史上一部风格独特的讽刺小说。被誉为“新儒林外史”。第一版于1947年由上海晨光出版公司出版。故事主要写抗战初期知识分子的群相。
-- **游学欧洲**
-    - 主角方鸿渐是个从中国南方乡绅家庭走出的青年人，迫于家庭压力与同乡周家女子订亲。但在其上大学期间，周氏患病早亡。准岳父周先生被方所写的唁电感动，资助他出国求学。
-    - 方鸿渐在欧洲游学期间，不理学业。为了给家人一个交待，方于毕业前购买了虚构的“克莱登大学”的博士学位证书，并随海外学成的学生回国。在船上与留学生鲍小姐相识并热恋，但被鲍小姐欺骗感情。同时也遇见了大学同学苏文纨。
-- **回到上海**
-    - 主人公方鸿渐到欧洲游学了四年回到了上海。住在已亡未婚妻的家里。因为整天无所事事，又与在邮船上认识的留学女博士苏文纨来往的过密，以及和女大学生唐小姐之间的纠葛，让岳父的家人很反感，而受到岳父家人的冷脸。
-- **去三闾大学任教**
-    - 之后方鸿渐受聘去内地三闾大学去任教，与好友赵辛楣以及其它几个应聘任教的人结伴而行。一路上几个人费尽了周折，也闹出了不少的笑话，终于还是赶到了学校。
-    - 在学校任教时方鸿渐在不知不觉中又卷入了教职人员之间的个人恩怨之中，又加上小地方的人少见多怪特有的狹隘观念，致使方鸿渐陷入到私人思怨的漩涡中。还有教师之间的明争暗斗也让方鸿渐不知所措。也包括自己对某些事情处理不当所至，所以被同事们排挤，心情总是郁郁不乐。
-- **回到上海结婚**
-    - 方鸿渐和英语助敦孙柔嘉的来往过密也引起了别人的嫉妒，使方鸿渐疲于应对。加之好友赵辛楣因为流言而被迫离开，更让本来不顺心的方鸿渐无心再待下去，无奈之下与孙小姐结伴回到了上海，不久二人便结了婚。
-    - 婚后的生活并不平静，两个人总是因为生活上的一些锁事发生争吵。而且互相之间谁也不知道谦让，这让他对婚姻家庭非常的失望和懊恼，终于在和妻子吵嘴之后，厌烦了这样的生活，终于也导致了两个人不可避免的分手。
-- **新版儒林外史**
-    - 小说通过主人公方鸿渐在欧洲留学回国后的人生经历，道出了“围在城里的人想逃出来，城外的人想进去。对婚姻也罢，职业也罢，人生的愿望大都是如此”这一内涵，同时还塑造了抗战时期一批或故作高深的浅陋，或貌似聪明的愚蠢，或功架十足的虚伪，或一本正经的无聊，或玲珑剔透的卑鄙的中国旧知识分子生动地艺术形象故事，被誉为“新儒林外史”。
+
+
+#### 3.1 游学欧洲
+- 主角方鸿渐是个从中国南方乡绅家庭走出的青年人，迫于家庭压力与同乡周家女子订亲。但在其上大学期间，周氏患病早亡。准岳父周先生被方所写的唁电感动，资助他出国求学。
+- 方鸿渐在欧洲游学期间，不理学业。为了给家人一个交待，方于毕业前购买了虚构的“克莱登大学”的博士学位证书，并随海外学成的学生回国。
+- 在船上与留学生鲍小姐相识并热恋，但被鲍小姐欺骗感情。同时也遇见了大学同学苏文纨。
+
+
+#### 3.2 回到上海
+- 主人公方鸿渐到欧洲游学了四年回到了上海。住在已亡未婚妻的家里。因为整天无所事事，又与在邮船上认识的留学女博士苏文纨来往的过密，以及和女大学生唐小姐之间的纠葛，让岳父的家人很反感，而受到岳父家人的冷脸。
+- 在这个单元中，方鸿渐和苏文纨的“爱情”纠葛占了重要的分量。苏文纨的倾心相与和方鸿渐的另有所欢，使他们演出了不少半真半假、女真男假的滑稽戏。
+- 暴露了苏文纨官宦小姐矜持自负、自作多情、因而落得空对镜花水月的尴尬相，也暴露了方鸿渐纨绔子弟优柔寡断、不更世事而又玩世不恭的浮华相。
+- 围绕着他们，作者还写了十里洋场社交生活的各种人物，在美国人花旗洋行里做买办、喜欢人们唤他Jimmy的张吉民，外表时髦、骨子里守旧的董斜川，“对雌雄性别，最有研究”的青年哲学家褚慎明，满肚子不老实、自我标榜是“新古典主义”的诗人曹元朗，以及暗中把方鸿渐当做情敌、枉费了心思的赵辛楣，甚至还有生得漂亮、头脑乖巧的唐晓芙等等，他们都在作者笔下显示了各自的性格和色相。
+- 他们宴饮会客、谈诗论文以及各种应酬交际是那样的内心空虚、百无聊赖以及庸俗不堪，这种生活不会培植健康的爱情，更不会培植健康的理想，本身就是一个有待冲破的“围城”。
+
+
+
+#### 3.3 去三闾大学任教
+- 第五章可以算作第二个单元，在这个单元中，在个人生活上分别吃了败仗的方鸿渐和赵辛楣，从“爱情”牢笼中冲了出来，他们由假想的情敌变为真正的挚友，共同到湖南平成三闾大学谋事。
+- 在这一单元里，还为下一单元的闹剧准备了新角色：未来三闾大学的训导长李梅亭，副教授顾尔谦和青年助教孙柔嘉。
+- 他们和方、赵结伴由沪启航南下，组成了一个临时的“小社会”。发生在这个“小社会”里的种种矛盾困扰和嬉戏调侃，以及沿途的所见所闻，构成了小说所描绘的现实主义画面的十分精彩的一部分。
+- 在学校任教时方鸿渐在不知不觉中又卷入了教职人员之间的个人恩怨之中，又加上小地方的人少见多怪特有的狹隘观念，致使方鸿渐陷入到私人思怨的漩涡中。
+- 还有教师之间的明争暗斗也让方鸿渐不知所措。也包括自己对某些事情处理不当所至，所以被同事们排挤，心情总是郁郁不乐。
+
+
+
+#### 3.4 学校的明争暗斗
+- 第六、七章是第三个单元，主要描写三闾大学里的明争暗斗。上自校长、训导长、各系主任，下至职员、学生、甚至还有家属，都卷入了一场令人头晕目眩的人事纠纷。
+- 职业上的排挤，情场上的竞争，堂而皇之的例行公事，见不得人的谣诼诽谤、阴谋诡计，一时间三闾大学成了竞相逐鹿的舞台。
+- 一些学者文士粉墨登场，他们之中有李梅亭那样满口仁义道德、满腹男盗女娼的半旧遗老。也有韩学愈那样外形木讷、内心龌龊、伪造学历、招摇撞骗的假洋博士。
+- 有高松年那样道貌岸然、老奸巨猾、口称维护教育尊严、其实却是酒色之徒的伪君子，也有汪处厚那样依附官僚、谋取职位、意在结党自固、终于自蹈覆辙的阿木林；有陆子潇、顾尔谦那样一心攀龙附凤、专事吹拍、浅薄猥琐的势利小人，也有范懿、汪太太那样虽然混迹学府、却只在情场上显露头角、推波助澜的名门女士。
+- 总之，活跃在这“新儒林”里的各色人等，虽然用不着再把八股文当做敲门砖，却都扯起一面自认为是最漂亮的旗帜，将真面目掩盖起来，施出周身解数去追求新的晋身之阶，仿佛自然界的动物蒙上保护色，追求自身的发展一样。
+- 自然，他们之中也还有没耗尽两肩正气的某些较好的人物，如虽则荒唐、孟浪，到底还有一些责任感的方鸿渐、赵辛楣，娇弱深沉、很有心计的孙柔嘉等等。
+- 这些人物，或像方鸿渐，不失为“可造之才”，或像赵辛楣，终竟有一技之长；或像孙柔嘉，是思虑周密、深藏韬略的女中强者──他们在好的社会里，完全有可能发展为出类拔萃的人才；但在那些乌烟瘴气的环境里，由于缺乏明确的人生目标，倒像十九世纪俄罗斯文学中的“多余人”那样，让社会的惰力抵消掉了他们的聪明才智。
+
+
+
+#### 3.4 回到上海结婚
+- 第八、九章是第四个单元。方鸿渐和英语助敦孙柔嘉的来往过密也引起了别人的嫉妒，使方鸿渐疲于应对。
+- 加之好友赵辛楣因为流言而被迫离开，更让本来不顺心的方鸿渐无心再待下去，无奈之下与孙小姐结伴回到了上海，不久二人便结了婚。
+- 婚后的生活并不平静，两个人总是因为生活上的一些锁事发生争吵。而且互相之间谁也不知道谦让，这让他对婚姻家庭非常的失望和懊恼，终于在和妻子吵嘴之后，厌烦了这样的生活，终于也导致了两个人不可避免的分手。
+- 方鸿渐刚刚建立起来的新家解体，他再次冲出一个“围城”，又来到一个“围城”的入口──他打算投奔在重庆当官的赵辛楣谋取职业，这肯定也是一条前途未卜的坎坷不平的道路。
+- 小说在一阵老式自鸣钟的“当、当……”声中结束。像过去一切杰出的现实主义作品一样，它没有提供什么关于社会和人生出路的明确结论，但他描写的生活本身，“深于一切语言，一切啼笑”。
+
+
+
+#### 3.5 新版儒林外史
+- 小说通过主人公方鸿渐在欧洲留学回国后的人生经历，道出了“围在城里的人想逃出来，城外的人想进去。对婚姻也罢，职业也罢，人生的愿望大都是如此。
+- 这一内涵，同时还塑造了抗战时期一批或故作高深的浅陋，或貌似聪明的愚蠢，或功架十足的虚伪，或一本正经的无聊，或玲珑剔透的卑鄙的中国旧知识分子生动地艺术形象故事，被誉为“新儒林外史”。
 
 
 
@@ -74,22 +112,6 @@
 
 
 
-### 05.全书的脉络整理
-- **生活在上海**
-    - 从第一章至第四章是第一个单元，写方鸿渐在上海和家乡（江南某县）的生活情景，以写上海为主。
-    - 在这个单元中，方鸿渐和苏文纨的“爱情”纠葛占了重要的分量。苏文纨的倾心相与和方鸿渐的另有所欢，使他们演出了不少半真半假、女真男假的滑稽戏。暴露了苏文纨官宦小姐矜持自负、自作多情、因而落得空对镜花水月的尴尬相，也暴露了方鸿渐纨绔子弟优柔寡断、不更世事而又玩世不恭的浮华相。
-    - 围绕着他们，作者还写了十里洋场社交生活的各种人物，在美国人花旗洋行里做买办、喜欢人们唤他Jimmy的张吉民，外表时髦、骨子里守旧的董斜川，“对雌雄性别，最有研究”的青年哲学家褚慎明，满肚子不老实、自我标榜是“新古典主义”的诗人曹元朗，以及暗中把方鸿渐当做情敌、枉费了心思的赵辛楣，甚至还有生得漂亮、头脑乖巧的唐晓芙等等，他们都在作者笔下显示了各自的性格和色相。
-    - 他们宴饮会客、谈诗论文以及各种应酬交际是那样的内心空虚、百无聊赖以及庸俗不堪，这种生活不会培植健康的爱情，更不会培植健康的理想，本身就是一个有待冲破的“围城”。
-- **三闾大学谋事**
-    - 第五章可以算作第二个单元，在这个单元中，在个人生活上分别吃了败仗的方鸿渐和赵辛楣，从“爱情”牢笼中冲了出来，他们由假想的情敌变为真正的挚友，共同到湖南平成三闾大学谋事。在这一单元里，还为下一单元的闹剧准备了新角色：未来三闾大学的训导长李梅亭，副教授顾尔谦和青年助教孙柔嘉。他们和方、赵结伴由沪启航南下，组成了一个临时的“小社会”。发生在这个“小社会”里的种种矛盾困扰和嬉戏调侃，以及沿途的所见所闻，构成了小说所描绘的现实主义画面的十分精彩的一部分。
-- **学校的明争暗斗**
-    - 第六、七章是第三个单元，主要描写三闾大学里的明争暗斗。上自校长、训导长、各系主任，下至职员、学生、甚至还有家属，都卷入了一场令人头晕目眩的人事纠纷。职业上的排挤，情场上的竞争，堂而皇之的例行公事，见不得人的谣诼诽谤、阴谋诡计，一时间三闾大学成了竞相逐鹿的舞台。
-    - 一些学者文士粉墨登场，他们之中有李梅亭那样满口仁义道德、满腹男盗女娼的半旧遗老，也有韩学愈那样外形木讷、内心龌龊、伪造学历、招摇撞骗的假洋博士；有高松年那样道貌岸然、老奸巨猾、口称维护教育尊严、其实却是酒色之徒的伪君子，也有汪处厚那样依附官僚、谋取职位、意在结党自固、终于自蹈覆辙的阿木林；有陆子潇、顾尔谦那样一心攀龙附凤、专事吹拍、浅薄猥琐的势利小人，也有范懿、汪太太那样虽然混迹学府、却只在情场上显露头角、推波助澜的名门女士。
-    - 总之，活跃在这“新儒林”里的各色人等，虽然用不着再把八股文当做敲门砖，却都扯起一面自认为是最漂亮的旗帜，将真面目掩盖起来，施出周身解数去追求新的晋身之阶，仿佛自然界的动物蒙上保护色，追求自身的发展一样。
-    - 自然，他们之中也还有没耗尽两肩正气的某些较好的人物，如虽则荒唐、孟浪，到底还有一些责任感的方鸿渐、赵辛楣，娇弱深沉、很有心计的孙柔嘉等等。这些人物，或像方鸿渐，不失为“可造之才”，或像赵辛楣，终竟有一技之长；或像孙柔嘉，是思虑周密、深藏韬略的女中强者──他们在好的社会里，完全有可能发展为出类拔萃的人才；但在那些乌烟瘴气的环境里，由于缺乏明确的人生目标，倒像十九世纪俄罗斯文学中的“多余人”那样，让社会的惰力抵消掉了他们的聪明才智。
-- **返回上海结婚**
-    - 第八、九章是第四个单元。方鸿渐和孙柔嘉在返回上海途中结了婚。这对双方来说，都不能算做令人激动的结合，加以失业造成的对于前途的焦虑，使他们婚后不断发生争吵。这种争吵在返沪途中还较为单纯，定居上海后，由于双方家庭和亲族的介入，矛盾更复杂了；在婆媳、翁婿、妯娌、亲朋、乃至主仆之间，一度曾发生了一系列龃龉和纠纷。
-    - 最后，方、孙的矛盾终因前者辞去报馆资料室主任而面临再次失业时激化了。方鸿渐刚刚建立起来的新家解体，他再次冲出一个“围城”，又来到一个“围城”的入口──他打算投奔在重庆当官的赵辛楣谋取职业，这肯定也是一条前途未卜的坎坷不平的道路。小说在一阵老式自鸣钟的“当、当……”声中结束。像过去一切杰出的现实主义作品一样，它没有提供什么关于社会和人生出路的明确结论，但他描写的生活本身，“深于一切语言，一切啼笑”。
 
 
 ### 06.最忌空想谈事业
